syntax = "proto3";

import "./chattingRequest.proto";
import "./chattingResponse.proto";

package packet;

message CommonPacket{
    uint32 packetType = 1;
    uint32 versionLength = 2;
    string version = 3;
    uint32 sequence = 4;    
    uint32 payloadLength = 5;
    bytes payload = 6;
}

message ChattingPacket{
    oneof chattingPayload{
        C2SChattingServerLoginRequest chattingServerLoginRequest = 1;
        S2CChattingServerLoginResponse chattingServerLoginResponse = 2;  
        C2SChattingServerCreateRoomRequest chattingServerCreateRoomRequest = 3;
        S2CChattingServerCreateRoomResponse chattingServerCreateRoomResponse = 4; 
        C2SChattingServerJoinRoomRequest chattingServerJoinRoomRequest = 5;       
    }
}