syntax = "proto3";

package response;

message S2CChattingServerLoginResponse{
    bool success = 1;
    string message = 2;
}

message S2CChattingServerCreateRoomResponse{
    int32 chattingRoomId = 1;
}

message S2CChattingServerChatSendResponse{
    string nickName = 1;
    string chatMessage = 2;
}